--- a/BE/pom.xml
+++ b/BE/pom.xml
@@ -53,6 +53,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>myapp</finalName>
     </build>
 
 </project>
