update Dockerfiles and docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,10 +18,15 @@ services:
     image: mongo:latest
     ports:
       - "27018:27017"
+    volumes:
+      - mongo-db:/data/db
   frontend_app:
     container_name: frontend
     build:
       context: ./FE
       dockerfile: Dockerfile
     ports:
-      - "4200:4200"
+      - "80:80"
+
+volumes:
+  mongo-db:
